data/derived/comb/progs/unify/prog6701.ml.out
Characters 23-28:
  let _ =bigAdd [0;1] [1;2,7,8];;
                         ^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type int
